--- a/Unit06/HW/part_1.css
+++ b/Unit06/HW/part_1.css
@@ -19,10 +19,10 @@ ul{
 }
 #list{
 	display: none;
-	width: 90%;
-	margin: 0 auto;
+	width: 96%;
+	margin: 0 auto !important;
 	background-color: white;
-	padding: 10px;
+	padding: 2%;
 	text-align: right;
 }
 .list_bar{
@@ -32,7 +32,7 @@ ul{
 	margin:0px auto;
 	width: 550px;
 	height: 60px;
-	padding:0px;
+	padding:40px 0 0 0;
 	font-family: Gabriola;
 	font-size: 24px;
 }
@@ -58,17 +58,18 @@ ul{
 	color: #abb2c5;
 }
 #menu_2{
-	background-image: url(../images/menu_2.jpg);
-	background-size: cover;
-	background-position: center top;
+	position: relative;
 	width: 100%;
-	line-height: 60px;
-	margin: 0 auto;
 }
 #inside{
-	padding:40px 20px 10px 6.66%;
+	width: 90%;
+	position: absolute;
+	z-index: 1;
+	top: 30%; left: 5%;
 }
 #tag{
+	position: absolute;
+	top: 10%;left: 5%;
 	height: 20px;
 	padding: 0px;
 }
@@ -97,14 +98,19 @@ ul{
 	margin: 0px;
 }
 .menu_2{
+	background: -webkit-linear-gradient(#00000000, #000000);
+	position: absolute;
+	bottom: 0px;left: 0;
 	height: 70px;
+	width: 95%;
+	padding-left: 5%;
 }
 .menu_2 li{
 	border-top: 1px solid rgba(255,255,255,0.3);
-	margin-right: 20px;
+	margin-right: 1%;
 	padding-top: 15px;
 	float: left;
-	width: 250px;
+	width: 30%;
 }
 #first{
 	clear: both !important;
@@ -113,9 +119,7 @@ ul{
 	color: #d7dada;
 	font-family: 'Merriweather';
 	line-height: 20px;
-	height: 20px;
 	margin: 0px;
-	padding: 0px;
 	float: left;
 	font-size: 10px;
 
@@ -123,17 +127,16 @@ ul{
 .menu_2 h4{
 	color: white;
 	margin: 0px;
-	padding: 4px 0 3px 0;
-	line-height: normal;
+	padding: 4px 0 3px 0px;
 	float: left;
 }	
 .number{
 	width: 60px;
-	height: 70px;
 	line-height: 40px !important;
-	height: 40px !important;
+	height: 40px;
 	font-size: 50px !important;
-	margin: 0 10px 0 0;
+	margin: 0;
+	padding-right: 10px;
 	font-family: 'Merriweather';
 }
 sub{
